# Alcubierre

./: .gitignore  Cargo.toml  LICENSE  README.md  c1.json  c2.json  test.py
examples/basic/: main.rs  player.rs  scenes.rs  scripts.rs
examples/basic/scenes/: main.rs  second.rs
examples/basic/scripts/: gateway.rs  player.rs
examples/basic/ui/: scene1.html
examples/pingpong/: .gitignore  Cargo.toml  atlas.json  ball.rhai  main.rs  scenes.rs  scripts.rs
examples/pingpong/scenes/: fail.rs  main.rs
examples/pingpong/scripts/: ai.rs  ball.rs  fail.rs  player.rs
examples/pingpong/src/: lib.rs  scenes.rs  scripts.rs
examples/pingpong/src/scenes/: fail.rs  main.rs
examples/pingpong/src/scenes/ui/: scene1.html  test.html
examples/pingpong/src/scripts/: ai.rs  ball.rs  barrier.rs  fail.rs  player.rs
examples/pingpong/ui/: failed.html  scene1.html
examples/wgpu/: main.rs  player.rs
src/: audio.rs  camera.rs  events.rs  game_object.rs  helpers.rs  keyboard.rs  lib.rs  physics.rs  renderer.rs  scene.rs  ui.rs
src/audio/: basic.rs
src/game_object/: behaviours.rs  graphics.rs  physics.rs
src/renderer/: atlas.rs  buffer.rs  camera.rs  circle.rs  sprite.rs  texture.rs
src/renderer/shaders/: circle.frag  circle.wgsl  quad.frag.wgsl  quad.vert.wgsl  quad.wgsl  sprite.wgsl
src/renderer/sprite/: texture.rs
src/ui/: backend.rs  backends.rs  frontend.rs  parser.rs
src/ui/backend/: button.rs  helpers.rs  text.rs  wgpu.rs
src/ui/backends/: raylib.rs
src/ui/backends/raylib/: button.rs  raylib.rs  text.rs
src/ui/frontend/: errors.rs  helpers.rs  rough.rs
src/ui/frontend/rough/: colors.rs  content.rs  params.rs  spacing.rs
src/ui/parser/: helpers.rs
tests/: basic.hfm  c1.hfm  c1.json  c2.hfm  c2.json  parser.rs
