[package]
name = "flame"
version = "0.1.0"
edition = "2021"

[dependencies]
flume = "0.10.14"
hashbrown = "0.13.2"
lazy_static = "1.4.0"
miette = { version = "5.9.0", features = ["fancy"] }
nalgebra = "0.32.2"
nom = "7.1.3"
rand = "0.8.5"
rapier2d = { version = "0.17.2", features = ["simd-stable"] }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
wgpu = "0.16.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
