[package]
name = "alcubierre"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
bytemuck = { version = "1.13.1", features = [ "derive" ] }
cgmath = "0.18.0"
cfg-if = "1"
hashbrown = "0.13.2"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
kira = "0.8.3"
lazy_static = "1.4.0"
miette = { version = "5.9.0", features = ["fancy"] }
nalgebra = "0.32.2"
nom = "7.1.3"
rand = "0.8.5"
rapier2d = { version = "0.17.2", features = ["simd-stable","wasm-bindgen"] }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
pollster = "0.3.0"
#wgpu_glyph = "0.20.0"
wgpu_glyph = { path = "../wgpu_glyph" }
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.18"

console_error_panic_hook = "0.1.6"
wgpu = { version = "0.16.1", features = ["webgl"]}
wasm-bindgen = "0.2.86"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.63", features = ["Window","Document","Element","Headers", "Request", "RequestInit","RequestMode","Response","AudioContext","AudioBuffer"] }
kanal = "0.1.0-pre8"

[dev-dependencies]
pretty_assertions = "1.3.0"
