[package]
name = "pingpong"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alcubierre = { path = "../../" }
nalgebra = "0.32.2"
rand = "0.8.5"
rapier2d = "0.17.2"

env_logger = "0.10.0"
log = "0.4.18"

console_error_panic_hook = "0.1.6"
wgpu = { version = "0.16.1", features = ["webgl"]}
wasm-bindgen = "0.2.86"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.63", features = ["Window","Document","Element","Headers", "Request", "RequestInit","RequestMode","Response","AudioContext","AudioBuffer"] }
winit = "0.28.6"

[[bin]]
name = "pingpong"
path = "src/lib.rs"
